--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 /*
-MARSOC Server Control Pannel
+Tier1 Server Control Pannel
 Version: 0.2
 Date: 2011-02-27
 Author: Banshee
+Edit: BoSSMan_DK - 2001-04-27
 URL: http://going4.com
 
-MARSOC Server Control Pannel is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at http://going4.com.
+Tier1 Server Control Pannel is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at http://going4.com.
 
 http://creativecommons.org/licenses/by-nc-sa/3.0/
 */
 
 
 body {
-  background-color:rgb(42,42,42);
+  background-color:black;
   color:white;
   font-family: 'Droid Sans', Arial, serif;
   text-align:center;
