Changed some stuff. :)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,7 +4,7 @@ Version: 0.2
 Date: 2011-02-27
 Author: Banshee
 Edit: BoSSMan_DK - 2001-04-27
-URL: http://going4.com
+URL: http://tier1ops.eu
 
 Tier1 Server Control Pannel is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at http://going4.com.
 
