Added delete mission functionality

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -82,6 +82,11 @@ body {
     font-style: italic;
 }
 
+#missions_list {
+   text-align:left;
+   line-height:150%;
+}
+
 .inactive {
     opacity:0.4;filter:alpha(opacity=40);
 }
